changed order & position id property names
